Dependencies updated